--- a/springboot-dubbo/pom.xml
+++ b/springboot-dubbo/pom.xml
@@ -39,6 +39,9 @@
         <dubbo.version>2.6.0</dubbo.version>
         <zkclient.version>0.10</zkclient.version>
 
+        <mybatis.version>3.0.1</mybatis.version>
+        <fastjson.version>1.2.15</fastjson.version>
+        <alibaba.druid.version>1.1.3</alibaba.druid.version>
        <!-- <slf4j.version>1.7.7</slf4j.version>
         <logback.version>1.1.6</logback.version>-->
 
@@ -63,6 +66,25 @@
                 <groupId>com.101tec</groupId>
                 <artifactId>zkclient</artifactId>
                 <version>${zkclient.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.baomidou</groupId>
+                <artifactId>mybatis-plus-boot-starter</artifactId>
+                <version>${mybatis.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>fastjson</artifactId>
+                <version>${fastjson.version}</version>
+            </dependency>
+
+            <!-- 阿里巴巴druid数据库连接池 -->
+            <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>druid</artifactId>
+                <version>${alibaba.druid.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
