--- a/springboot-dubbo/zc-service/src/main/resources/application.yml
+++ b/springboot-dubbo/zc-service/src/main/resources/application.yml
@@ -16,3 +16,29 @@ dubbo :
 
 #开启包扫描，可替代 @EnableDubbo 注解
 ##dubbo.scan.base-packages=com.zc.gmall
+
+
+
+
+
+#  spring.datasource.url=
+#  spring.datasource.username=root
+#  spring.datasource.password=root
+#  spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#  #mybatis-plus
+#  mybatis-plus.mapper-locations=classpath:com/mht/springbootmybatisplus/mapper/xml/*.xml
+#  mybatis-plus.type-aliases-package=com.mht.springbootmybatisplus.entity
+
+#mysql
+spring:
+  datasource:
+    url: jdbc:mysql://localhost:3306/test?useUnicode=true&serverTimezone=GMT%2B8&characterEncoding=utf8
+    username: root
+    password: 123456
+    driver-class-name: com.mysql.jdbc.Driver
+#mybatis-plus
+mybatis-plus:
+  ## 配置扫描xml
+  mapper-locations: classpath:mapper/*.xml
+  #实体扫描，多个package用逗号或者分号分隔
+  type-aliases-package: com.zc.bean
